feat: manage POS customer records
